--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ out/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
 *.iws
 *.iml
 *.ipr
